--- a/2447957.html
+++ b/2447957.html
@@ -59,7 +59,7 @@
 <body>
     <dir="rtl>
     <div class="container">
-        <center><h1>Connected Games Development</h1></center>
+        <center><h1>Connected Games Development (Design)</h1></center>
         <center><h2>K2447957</h2></center>
         <h3>Blog 1</h3>
         <h4>My Time Plan as A game programmer for first 6 weeks</h4>
