--- a/2447957.html
+++ b/2447957.html
@@ -129,9 +129,9 @@
         <p>Week 2
             <p>
                 <b>Planned to make the level 01:</b>
-                <br>Unity is my engine of choice because of its versatility.But picking the right version is 
-                <br>important as I have to adjust it as per my teammates.I installed it via the Unity Hub, 
-                <br>which makes managing different projects and versions easier.
+                <br>Discussed about the level 01. About the arenas we are going to make. 
+                <br> Reasearch some concepts of the closed arena battle.
+                <br>Discussed about the difficulties and the obstracles we can put into the level 01.
             </p>
             <p>
                 <b>Defining Visual Style:</b>
