--- a/2447957.html
+++ b/2447957.html
@@ -129,9 +129,8 @@
         <p>Week 2
             <p>
                 <b>Planned to make the level 01:</b>
-                <br>Discussed about the level 01. About the arenas we are going to make. 
-                <br> Reasearch some concepts of the closed arena battle.
-                <br>Discussed about the difficulties and the obstracles we can put into the level 01.
+                Discussed about the level 01. About the arenas we are going to make. Reasearch some concepts of the closed arena battle.
+                Discussed about the difficulties and the obstracles we can put into the level 01.
             </p>
             <p>
                 <b>Defining Visual Style:</b>
