--- a/2447957.html
+++ b/2447957.html
@@ -133,18 +133,11 @@
                 Discussed about the difficulties and the obstracles we can put into the level 01.
             </p>
             <p>
-                <b>Defining Visual Style:</b>
-                It’s crucial to establish the game’s visual style early on. Is it realistic, cartoonish, or pixelated? The
-                visual style should align with the game’s tone and target audience. As a designer, 
-                I’ll help define the look and feel of the game world and how assets should fit together within that context. 
+                <b>Started making the level 01:</b>
+                As per the research and the reference for arena we have desided to make the level 01, as an gladiator arena.
+                With a close area where there will be ramps for doing the stunts and there will be some obstracles. 
             </p>
-         <p>
-             <b>For a platformer:</b>
-             I might focus on how the character's animation feels fluid and how the environment is designed with clear cues.
-            For an RPG: I might focus on creating distinct and visually varied characters, creatures, and loot assets.
-
-                
-            </p>
+         
         <p>
             <b> Characters and NPCs:</b> 
             The player character and NPCs should not only look distinct but also reflect their role in the game 
