--- a/2447957.html
+++ b/2447957.html
@@ -73,7 +73,7 @@
             <tr>
                 <td>1</td>
                 <td>Setup & Environment Configuration</td>
-                <td>Install Unity, GitHub, and Visual Studio. Set up Git repository, project structure, and version control.</td>
+                <td>Install Unity and unreal engine, GitHub, and Visual Studio. Set up Git repository, project structure, and version control.</td>
             </tr>
             <tr>
                 <td>2</td>
@@ -139,11 +139,8 @@
             </p>
          
         <p>
-            <b> Characters and NPCs:</b> 
-            The player character and NPCs should not only look distinct but also reflect their role in the game 
-            (e.g., a hero’s design might be bold and dynamic, while a villager might be simpler).
-            Enemies: Enemies are designed with gameplay mechanics in mind. For example, a flying enemy in a platformer 
-            might need to have simple looping animations for its flight patterns.
+            <b> Started making the level on unreal engine:</b> 
+            Setup the unreal engine for the level 01. 
 
                 
             </p>
