--- a/2447957.html
+++ b/2447957.html
@@ -89,7 +89,7 @@
              <tr>
                 <td>4</td>
                 <td>Blocking out the level</td>
-                <td>Blocking out is the process of creating a rough version of the level using simple shapes before detailing. </td>
+                <td>Blocking out the process of creating a rough version of the level using simple shapes before detailing. </td>
                 
             </tr>
         </table>
