--- a/2447957.html
+++ b/2447957.html
@@ -94,7 +94,7 @@
             </tr>
              <tr>
                 <td>5</td>
-                <td>Adding Assets and Detailing for the level 01</td>
+                <td>Adding Assets and Detailing. </td>
                 <td>Once the basic structure is in place, we are going to start adding environment details. </td>
                 
             </tr>
