--- a/2447957.html
+++ b/2447957.html
@@ -62,7 +62,7 @@
         <center><h1>Connected Games Development (Design)</h1></center>
         <center><h2>K2447957</h2></center>
         <h3>Blog 1</h3>
-        <h4>My Time Plan as A game designer for the 5th weeks</h4>
+        <h4>My Time Plan as a game designer for the 5th weeks</h4>
         
         <table>
             <tr>
