--- a/2447957.html
+++ b/2447957.html
@@ -166,13 +166,13 @@
 
         <p>Week 5
             <p>
-                <b>Asset Selection</b>
+                <b>Asset Selection:</b>
                 Choose appropriate assets that fit the theme and style of your level.
                 Optimize assets to maintain performance while ensuring visual fidelity.
             </p>
 
         <p>
-                <b>Placing Assets</b>
+                <b>Placing Assets:</b>
                 Use modular assets to build the environment efficiently.
                 Snap assets to the grid for precise alignment, but allow slight variations for a natural look.
             </p>
