--- a/2447957.html
+++ b/2447957.html
@@ -187,9 +187,11 @@
                 player focus and set the mood.
             </p>
             <p>
-                <b>Started making the level 01:</b>
-                As per the research and the reference for arena we have desided to make the level 01, as an gladiator arena.
-                With a close area where there will be ramps for doing the stunts and there will be some obstracles. 
+                <b>Camera Setup:</b>
+                I started working on a dynamic camera system tailored for car battles. It needed to feel
+                smooth during normal driving but also adapt during high speed stunt and tight combat.
+                I experimented with a few different follow behaviours and camera angle to find a balance 
+                that felt cinamatic without making the player lose control or get disoriented.
             </p>
     
         
