--- a/2447957.html
+++ b/2447957.html
@@ -186,6 +186,8 @@
                 like the ramps, to reeally bring the scene to life. I also tested out of warm tones to help guide 
                 player focus and set the mood.
             </p>
+
+            <p>Week 7
             <p>
                 <b>Camera Setup:</b>
                 I started working on a dynamic camera system tailored for car battles. It needed to feel
@@ -193,7 +195,6 @@
                 I experimented with a few different follow behaviours and camera angle to find a balance 
                 that felt cinamatic without making the player lose control or get disoriented.
             </p>
-    
         
     <p>
         <b>looking forward:</b>
