--- a/2447957.html
+++ b/2447957.html
@@ -230,6 +230,19 @@
                 dust particles in the air, flickering lights, and arena scuff marks. I also added decals for tire marks 
                 and wall damage. It’s amazing how much more immersive the level feels with just a few well-placed effects.
             </p>
+
+        <p>Week 12
+            <p>
+                <b>Destruction and drama:</b>
+               Larning hard into the chaos this week. Adding weapons and damage effects of the car when it damage. 
+            </p>
+
+        <p>Week 13
+            <p>
+                <b>UI flow:</b>
+               Making the wireframes for menu and other pages like Main screen, model select, pause/ play, aiming,
+                options page.
+            </p>
     <p>
         <b>looking forward:</b>
         <br>To build the assets of the level 01.
