--- a/2447957.html
+++ b/2447957.html
@@ -254,7 +254,7 @@
         <p>Week 13
             <p>
                 <b>Final Polishing for Level 01:</b>
-               Focused on refining the visual clarity of the level—adjusted lighting, tuned fog levels,
+               Focused on refining the visual clarity of the level adjusted lighting, tuned fog levels,
                and tweaked materials to make sure the key areas stand out clearly. Everything needs to be 
                readable during fast gameplay.
                 </p>
