--- a/2447957.html
+++ b/2447957.html
@@ -26,7 +26,7 @@
             font-size: 2em;
         }
                 table {
-            width: 100%;
+            //width: 100%;
             border-collapse: collapse;
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
