--- a/2447957.html
+++ b/2447957.html
@@ -161,8 +161,10 @@
                 <b>Started making the assets of level 01:</b>
                 Making the assets such as the stadium, pillars and lights.
             </p>
+        <div class="images">
         <center>Level 1</center>
-       <left><br><img src</left>
+       <left><br><img src="arena_1.png"></left>
+        </div>
         
         <p>Week 4
             <p>
