--- a/2447957.html
+++ b/2447957.html
@@ -162,9 +162,15 @@
                 Making the assets such as the stadium, pillars and lights.
             </p>
         <div class="images">
-        <center>Level 1</center>
+        <left>Level 1</left>
        <left><br><img src="arena_1.png"></left>
         </div>
+        <br><br>
+        <div class="images">
+        <left>Level 2</left>
+       <left><br><img src="arena.png"></left>
+        </div>
+        
         
         <p>Week 4
             <p>
@@ -285,6 +291,15 @@
                 Adjusted ramp angles and repositioned obstacles to allow for more satisfying jumps and stunts.
                 The goal is to reward risk and keep movement interesting without frustrating the player.
             </p>
+        <div class="images">
+        <left>Scene 1</left>
+       <left><br><img src="scene1.png"></left>
+        </div>
+        <br><br>
+        <div class="images">
+        <left>Scene 1</left>
+       <left><br><img src="scene2.png"></left>
+        </div>
 
         <p>Week 12
             <p>
