--- a/2447957.html
+++ b/2447957.html
@@ -287,7 +287,7 @@
                We did an initial internal playtest of Level 01. A lot of useful feedback came out—players loved the atmosphere 
                 but mentioned that some areas felt too cramped for car combat. I took notes and began reworking parts of the
                 arena to open up space without losing the intense feeling of confinement.
-               <b> Tuning Obstacles:</b> 
+               <br><b> Tuning Obstacles:</b> 
                 Adjusted ramp angles and repositioned obstacles to allow for more satisfying jumps and stunts.
                 The goal is to reward risk and keep movement interesting without frustrating the player.
             </p>
