--- a/2447957.html
+++ b/2447957.html
@@ -201,7 +201,13 @@
                 like the ramps, to reeally bring the scene to life. I also tested out of warm tones to help guide 
                 player focus and set the mood.
             </p>
-<table>            
+<h3>Blog 2</h3>
+<table>   
+    <tr>
+                <th>Week</th>
+                <th>Task</th>
+                <th>Details</th>
+            </tr>
   <tr>
                 <td>7</td>
                 <td>Sound Design. </td>
