--- a/2447957.html
+++ b/2447957.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K2447957</title>
+    <left><title>K2447957</title></left>
     <style>
         body {
             background-color: beige;
