--- a/2447957.html
+++ b/2447957.html
@@ -255,12 +255,18 @@
     
             <p>Week 7
             <p>
-                <b>Sound Desin Discussion:</b>
+                <b>Sound Design Discussion:</b>
                 This week, we started thinking seriously about the audio. Discussed about the kind of atmosphere we want 
                 in level 01. Since its a gladiator style arena, we are looking at the metalic clash and maybe some background
                 music that build tension. I also explored how spatial audio could help immerse players like hearing engines
                 reving differently based on their distance directions.
             </p>
+        <p>
+            <br> References to the sounds from freesound.org
+            <br><a Href="https://freesound.org/people/SoundFX.studio/sounds/456266/">Sound 1</a>
+            <br><a Href="https://freesound.org/people/cydon/sounds/268556/"> Sound 2</a>
+            <br><a Href="https://freesound.org/people/pgi/sounds/212602/">Sound 3 </a>
+        </p>
        
             <p>Week 8
             <p>
